--- a/7 ЛР/ProjectStructure/ProjectStructure/ProjectStructure.csproj
+++ b/7 ЛР/ProjectStructure/ProjectStructure/ProjectStructure.csproj
@@ -43,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Admin.cs" />
+    <Compile Include="Models\ElectronicDiary.cs" />
+    <Compile Include="Models\ElectronicJournal.cs" />
+    <Compile Include="Models\Pupil.cs" />
+    <Compile Include="Models\Schedule.cs" />
+    <Compile Include="Models\Teacher.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
