--- a/7 ЛР/ProjectStructure/ProjectStructure/ProjectStructure.csproj
+++ b/7 ЛР/ProjectStructure/ProjectStructure/ProjectStructure.csproj
@@ -43,6 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\ServiceAddHomework.cs" />
+    <Compile Include="Application\ServiceAddMark.cs" />
+    <Compile Include="Application\ServiceAddSchedule.cs" />
+    <Compile Include="Application\ServiceAddUser.cs" />
+    <Compile Include="Application\ServiceGetASchedule.cs" />
+    <Compile Include="Application\ServiceGetClassData.cs" />
+    <Compile Include="Application\ServiceGetUserData.cs" />
+    <Compile Include="Application\ServiceViewHomework.cs" />
+    <Compile Include="Application\ServiceViewMark.cs" />
+    <Compile Include="Application\ServiceVisitorTrackingOfLessons.cs" />
+    <Compile Include="Application\ServiceWorksWithDatabases.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\ElectronicDiary.cs" />
     <Compile Include="Models\ElectronicJournal.cs" />
